tests/typecheck/should_run/T13838.hs
{-# OPTIONS_GHC -fdefer-type-errors #-}

module Main where

main :: () -> ()
main = undefined
