tests/typecheck/should_fail/tcfail204.hs

{-# OPTIONS_GHC -Wall #-}
{-# OPTIONS_GHC -Werror #-}

-- #3261

module Foo where

foo :: Int
foo = ceiling 6.3

